# meson

mesonbuild/: build.py  linkers.py
mesonbuild/backend/: ninjabackend.py  vs2010backend.py
mesonbuild/compilers/: c.py  compilers.py
test cases/common/206 include symbols/: meson.build  plugin.cpp
